Fix: if the title was shown, the last item in the stations list couldn't be visible on small screens.

--- a/www/scss/radiopi.scss
+++ b/www/scss/radiopi.scss
@@ -9,6 +9,11 @@
 
 .radiopi {
     padding-bottom: 2 * $headerHeight;
+    transition: padding 0.5s;
+
+    &.titleShown{
+        padding-bottom: 2 * $headerHeight + 40px;
+    }
 }
 
 .loading {
